fix mobile footer and overflow break-word

--- a/themes/maxelweb-theme/static/css/theme/mobile.css
+++ b/themes/maxelweb-theme/static/css/theme/mobile.css
@@ -87,8 +87,8 @@
 
     footer .ms-footer-logo,
     footer .ms-footer-text {
-        float: none;
-        width: auto;
+        float: none !important;
+        width: auto !important;
         text-align: center !important;
         padding: 2em;
     }
@@ -150,8 +150,17 @@
     }
 
     .ms-section-title {
-        text-align: center !important;
         padding: 20px 10px;
+    }
+
+    .ms-section-title h1,
+    .ms-breadcrumb li a {
+        overflow-wrap: break-word;
+    }
+
+    .ms-section-title h1 i {
+        display: block;
+        margin: 10px auto 30px;
     }
 
     .ms-section-content p {
@@ -267,8 +276,8 @@
 
     footer .ms-footer-logo,
     footer .ms-footer-text {
-        float: none;
-        width: auto;
+        float: none !important;
+        width: auto !important;
         text-align: center !important;
         padding: 2em;
     }
